# mcp-python-client

./: .coveragerc  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  constraints.txt  mkdocs.yml  noxfile.py  pyproject.toml  setup.sh  setup_github_repo.sh
.cursor/: rules
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml
constraints/: python3.12-linux-x86_64.txt
docs/: api.md  development.md  index.md
src/alpha_lib/: __init__.py  example.py
src/mcp_cli/: main.py
tests/: conftest.py  test_example.py
